postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment

spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
      volumes:
        persistentVolumeClaim:
            claimName: postgres-pv-volume
      - name: postgres
        image: postgres:12
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432

metadata:
  name: postgres
  namespace: default
