poll.service.yaml
apiVersion: v1
kind: Service

spec:
  selector:
    app: poll
  ports:
    - port: 80
      targetPort: 80

metadata:
  name: poll
