postgres.service.yaml
apiVersion: v1
kind: Service

spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
