redis.service.yaml
apiVersion: v1
kind: Service

spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  restartPolicy: Always

metadata:
  name: redis
  namespace: default
