result.service.yaml
apiVersion: v1
kind: Service

spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80

metadata:
  name: result
