traefik.service.yaml

kind: Service
apiVersion: v1

spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
  type: NodePort

metadata:
  name: traefik-ingress-service
  namespace: kube-system
