poll.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: poll
  - http:
      paths:
      - path: /pollpath
        backend:
          serviceName: poll
          servicePort: 80
