result.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

spec:
  rules:
  - host: result
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: test
          servicePort: 80

metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
